k8s/cert-manager-istio/receiver-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: receiver-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: receiver-cert-prod # This should match the Certificate secretName
    hosts:
    - "dummy.gke.1234201.xyz"
